# npe-pfn

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  pyproject.toml
docs/: sample_batched_implementation.md
notebooks/: benchmark_sample_batched.ipynb  sampling_comparison.ipynb
npe_pfn/: npe_pfn.py
scripts/: evaluate_ropefm.py  evaluate_ropefm_batched.py  launch_batched_eval.sh  plot_batched_results.py  plot_comparison.py  plot_evaluation_results.py  run.sh  run_batched_eval.sh  run_batched_eval_oar.sh  sampling_comparison.py  tasks.txt  test_priors.py
tests/: test_npe_pfn.py  test_support_posterior.py
